# multibeep

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  arms.html  bandits.html  genindex.html  policies.html  py-modindex.html  scenarios.html  search.html  searchindex.js  setup.py  util.html
_modules/: index.html
_sources/: index.txt  recommenders.txt
html/: index.html  recommenders.html  searchindex.js
include/multibeep/arm/: arm.hpp  bernoulli.hpp  data.hpp  exponential.hpp  normal.hpp  python_arm.hpp
include/multibeep/bandit/: arm_info.hpp  bandit.hpp  empirical_bandits.hpp  posterior_bandit.hpp
include/multibeep/policy/: policy.hpp  prob_match.hpp  random.hpp  successive_halving.hpp  ucb.hpp  ucbp.hpp  ucbv.hpp
include/multibeep/recommender/: recommender.hpp
include/multibeep/util/: friedman_test.hpp  p_max.hpp  posteriors.hpp  reward_predictor.hpp  statistics.hpp
multibeep/: __init__.py  arms.pxd  arms.pyx  arms_cpp.pxd  bandits.pxd  bandits.pyx  bandits_cpp.pxd  multibeep.pyx  policies.pxd  policies.pyx  policies_cpp.pxd  typedefs.pxd  util.pxd  util.pyx  util_cpp.pxd
python_examples/: autofolio_f_race.py  hyperband.py  hyperband_example.py  python_arm_custom_arm_test.py  python_arm_test.py  python_interface_test.py
sphinx_doc/: Makefile  arms.rst  bandits.rst  conf.py  policies.rst  scenarios.rst  util.rst
src/python_tests/: CMakeLists.txt  python_arm_test.py
src/test/: CMakeLists.txt  unit_test_arm.cpp  unit_test_bandit.cpp  unit_test_friedman.cpp  unit_test_policies.cpp
